--- a/Source_Code/reconstruct/basic/README
+++ b/Source_Code/reconstruct/basic/README
@@ -9,9 +9,9 @@ TO DO:
 
 
 INPUT FILES :
-	projections.bin - Binary file containing the projection data. The projections must be in the form of a 1D floating point array in raster order of size proj_num x proj_cols x proj_rows, where proj_num is the number of projections, proj_rows is the number of projection rows, and proj_cols is the number of projection columns. A projection is typically computed as the logarithm of the ratio of light intensity incident on the object to the measured intensity.
-	weights.bin - Binary file containing the weight data. The weights must be in the form of a 1D floating point array in raster order of size proj_num x proj_cols x proj_rows. Every entry of 'weights' is used to appropriately weigh each term of the 'projections' array in the likelihood term of MBIR.
-	proj_angles.bin - Binary file containing the list of angles, in floating point format, at which the projections are acquired. 
+	projections.bin - Binary file containing the projection data. The projections must be in the form of a 1D floating point array in raster order of size proj_num x proj_cols x proj_rows, where proj_num is the number of projections, proj_rows is the number of projection rows, and proj_cols is the number of projection columns. A projection is typically computed as the logarithm of the ratio of light intensity incident on the object to the measured intensity. The values are stored in row major order i.e, the fastest changing dimension is along a row, followed by columns and then the projection angles. 
+	weights.bin - Binary file containing the weight data. The weights must be in the form of a 1D floating point array in raster order of size proj_num x proj_cols x proj_rows. Every entry of 'weights' is used to appropriately weigh each term of the 'projections' array in the likelihood term of MBIR. The ordering of values is same as that for projections.bin.
+	proj_angles.bin - Binary file containing the list of angles, in radians and floating point format, at which the projections are acquired. The angular range can progressively increase, from 0 to infinity. This occurs if the object is rotated continuously, from 0 to pi radians, then to 2 x pi radians, and so on.
 	proj_times.bin - Binary file containing the list of times, in floating point format, at which the projections are acquired.
 	recon_times.bin - Binary file containing the list of reconstruction time steps in floating point format. The reconstruction is assumed to be peicewise constant with fixed/varying step-sizes. Thus, the binary file should contain the array with times at which the steps occur. For example, to do a single 3D reconstruction, we use a array of two elements, first element being the time of the first projection and the second element being the time of the last projection.
 
