Added options to change gen Huber func params. Introduced delta and T options. Also added a option which can enforce convexity.

--- a/Source_Code/MBIR_4D/README
+++ b/Source_Code/MBIR_4D/README
@@ -32,7 +32,9 @@
 		- float c_t : Parameter of the temporal qGGMRF prior. It should be chosen such that c_t < 0.01*D/sig_t where 'D' is a rough estimate for the maximum change in value of the reconstruction along a temporal edge.
 		- float convg_thresh : Convergence threshold expressed as a percentage (chosen in the range of 0 to 100).
 		- float remove_rings : Legal values are '0', '1', '2' and '3'. If '0', then the algorithm does not do any ring correction. If '1', it does ring correction by estimating an offset error in the projection data. If it is equal to or greater than '1', it does ring correction. '1' does a uncontrained optimization. '2' enforces a zero mean constraint on the offset errors. '3' enforces a zero constraint on the weighted average of the offset errors over overlapping rectangular patches. 
-		- float remove_streaks : Legal values are '0' and '1'. If '0', then the algorithm does not correct for streaks. If '1', then the algorithm corrects for the streaks by using a generalized Huber function to weigh down those measurements with high data mismatch error.
+		- int32_t quad_convex : Legal values are '0' and '1'. If '1', then the algorithm uses a convex quadratic forward model. This model does not account for the zinger measurements which causes streak artifacts in the reconstruction. If '0', then the algorithm uses a generalized Huber function which models the effect of zingers. This reduces streak artifacts in the reconstruction. Also, using '1' disables estimation of variance parameter 'sigma' and '0' enables it.
+		- float huber_delta : The parameter \delta of the generalized Huber function which models the effect of zingers. Legal values are in the range 0 to 1.
+		- float huber_T : The threshold parameter T of the generalized Huber function. All positive values are legal values.
 		- uint8_t restart : Legal values are '0' and '1'. It is typically used if the reconstruction gets killed for any reason. If '1', the reconstruction starts from the previously run multi-resolution stage.
 		- FILE *debug_msg_ptr : Pointer to the file to which the debug messages should be directed. Use 'stdout' if you do not want to direct messages to a file on disk.
 	- Outputs (Return value) : '0' implies a safe return. 
