--- a/Source_Code/reconstruct/real_data/Standard_Data_Format/README
+++ b/Source_Code/reconstruct/real_data/Standard_Data_Format/README
@@ -27,7 +27,9 @@ INPUT ARGUMENTS :
 	c_t - A parameter of the temporal qGGMRF prior model. It should be fixed to be much lesser (typically 0.01 times) than the ratio of voxel difference over an edge to sigma_t. For instance, choose c_t < 0.01*D/sig_t where 'D' is a rough estimate for the maximum change in value of the reconstruction along a temporal edge.
 	convg_thresh - Used to determine when the algorithm has converged at each stage of multi-resolution. It is expressed as a percentage (chosen in the range of 0 to 100). If the ratio of the average magnitude of voxel updates to the average voxel value expressed as a percentage is less than "convg_thresh" then the algorithm is assumed to have converged and the algorithm stops.
 	remove_rings - If specified, it models the detector non-uniformities and reduces the ring artifacts in the reconstruction. '0' means no ring correction. '1' enables ring correction. '2' uses the improved ring correction by enforcing a zero mean constraint on the offset errors. '3' uses a more advanced ring correction by enforcing a zero constraint on the weighted mean of offset errors over overlapping rectangular patches. If used, the ring artifacts in the reconstruction should reduce.
-	remove_streaks - If specified, it models the effect of anamalous measurements (also called zingers). The streak artifacts in the reconstruction should reduce. '0' means no streak correction. '1' reduces the streaks.
+	quad_convex - Legal values are '0' and '1'. If '1', then the algorithm uses a convex quadratic forward model. This model does not account for the zinger measurements which causes streak artifacts in the reconstruction. If '0', then the algorithm uses a generalized Huber function which models the effect of zingers. This reduces streak artifacts in the reconstruction. Also, using '1' disables estimation of variance parameter 'sigma' and '0' enables it.
+	huber_delta - The parameter \delta of the generalized Huber function which models the effect of zingers. Legal values are in the range 0 to 1.
+	huber_T - The threshold parameter T of the generalized Huber function. All positive values are legal values.
 	restart - If the reconstruction gets killed due to any unfortunate reason (like exceeding walltime in a super-computing cluster), use this flag to restart the reconstruction from the beginning of the last run multi-resolution stage. Don't use restart if WRITE_EVERY_ITER is 1.
 	path2data - Path to the dataset in HDF format containing the projection, weight, projection angles and projection times.
 
