Updated citation info in docs

--- a/doc/source/bibtex/cite.bib
+++ b/doc/source/bibtex/cite.bib
@@ -8,31 +8,17 @@ pages   = {1188--1193},
 year    = {2014}
 }
 
-@article{mohan2015timbir,
-title       = {TIMBIR: A Method for Time-Space Reconstruction from Interlaced Views},
-journal     = {IEEE Transactions on Computational Imaging},
-author      = {Mohan, Kadri and Venkatakrishnan, Singanallur and Gibbs, John and Gulsoy, E and Xiao, Xianghui and De Graef, Marc and Voorhees, Peter and Bouman, Charles},
-year        = {2015},
-publisher   ={IEEE}
-}
+@ARTICLE{mohan2015timbir, 
+author={K. Aditya Mohan and S. V. Venkatakrishnan and J. W. Gibbs and E. B. Gulsoy and X. Xiao and M. De Graef and P. W. Voorhees and C. A. Bouman}, 
+journal={IEEE Transactions on Computational Imaging}, 
+title={{TIMBIR}: A Method for Time-Space Reconstruction From Interlaced Views}, 
+year={2015}, 
+volume={1}, 
+number={2}, 
+pages={96-111}, 
+doi={10.1109/TCI.2015.2431913}, 
+ISSN={2333-9403}, 
+month={June},}
 
-@INPROCEEDINGS{mohan2015mbir,
-author      = {Mohan, K.A. and Venkatakrishnan, S.V. and Gibbs, J.W. and Gulsoy, E.B. and Xianghui Xiao and De Graef, M. and Voorhees, P.W. and Bouman, C.A.},
-booktitle   = {Acoustics, Speech and Signal Processing (ICASSP), 2015 IEEE International Conference on},
-title       = {4D model-based iterative reconstruction from interlaced views},
-year        = {2015},
-pages       = {783-787},
-keywords    = {computerised tomography;image reconstruction;image resolution;iterative methods;medical image processing;ultrasonic imaging;4D model;4D model based iterative reconstruction algorithm;MBIR;TIMBIR method;X-ray tomography;data acquisition;interlaced view sampling;interlaced views;iterative reconstruction;material samples;temporal resolution;time interlaced model based iterative reconstruction;Computed tomography;Image reconstruction;Phantoms;Reconstruction algorithms;Synchrotrons},
-doi         = {10.1109/ICASSP.2015.7178076},
-month       = {April},}
 
-@INPROCEEDINGS{mohan2014,
-author={Mohan, K.A. and Venkatakrishnan, S.V. and Drummy, L.F. and Simmons, J. and Parkinson, D.Y. and Bouman, C.A.},
-booktitle={Acoustics, Speech and Signal Processing (ICASSP), 2014 IEEE International Conference on},
-title={Model-based iterative reconstruction for synchrotron X-ray tomography},
-year={2014},
-pages={6909-6913},
-keywords={computerised tomography;image reconstruction;iterative methods;synchrotrons;analytical reconstruction techniques;model based iterative reconstruction;synchrotron X-ray tomography;three dimensional imaging;Cost function;Detectors;Image reconstruction;Noise;Synchrotrons;Tomography;X-ray imaging},
-doi={10.1109/ICASSP.2014.6854939},
-month={May},}
 
