--- a/doc/source/bibtex/cite.bib
+++ b/doc/source/bibtex/cite.bib
@@ -9,9 +9,9 @@ year    = {2014}
 }
 
 @article{mohan2015timbir,
-title       = {TIMBIR: A Method for Time-Space Reconstruction from Interlaced Views},
+title       = {{TIMBIR}: A Method for Time-Space Reconstruction from Interlaced Views},
 journal     = {IEEE Transactions on Computational Imaging},
-author      = {Mohan, Kadri and Venkatakrishnan, Singanallur and Gibbs, John and Gulsoy, E and Xiao, Xianghui and De Graef, Marc and Voorhees, Peter and Bouman, Charles},
+author      = {Mohan, K. Aditya and Venkatakrishnan, Singanallur and Gibbs, John and Gulsoy, E and Xiao, Xianghui and De Graef, Marc and Voorhees, Peter and Bouman, Charles},
 year        = {2015},
 publisher   ={IEEE}
 }
